<resources>
    <string name="app_name">appVersion: 0.01 Date set 11/1/2022</string>
    <string name="streamingSearchAppInformation">Search through 11 streaming services
        to see if your show or movie is available.</string>
    <string name="searchMediaTextViewLabel">Search Media</string>
    <string name="ratingsMediaTextViewLabel">Ratings.</string>
    <string name="mediaDetailInfoTextViewLabel">Media Detail Information.</string>
    <string name="mediaImageViewContentDescription">Media Poster.</string>
    <string name="movieDataTextViewTextHolder">Media Data.</string>
    <string name="trendingMediaLabelTextView">Currently Trending Movies</string>

    <string name="searchLabelText">Search Movie</string>
    <string name="ratingsLabelText">Ratings</string>
    <string name="moviePlotTextViewPlaceholder">Movie Plot.</string>
    <string name="moviePosterImageDescription">Movie Poster</string>
    <string name="backDropImageDescription">Backdrop for media</string>
    <string name="appVersion">appVersion: 0.01 Date set 11/1/2022</string>
</resources>