<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollViewConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backDropImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/backDropImageDescription"
                app:layout_constraintEnd_toStartOf="@+id/moviePosterImageView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchMediaLabelTextView"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingsTextView">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/servicesChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/moviePlotTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/moviePlotTextViewPlaceholder"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/ratingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingsLabelText"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/moviePosterImageView"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toEndOf="@+id/moviePosterImageView"
                app:layout_constraintTop_toBottomOf="@+id/backDropImageView" />

            <ImageView
                android:id="@+id/moviePosterImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/moviePosterImageDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mediaSearchView"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toEndOf="@+id/mediaSearchView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/searchMediaLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="140dp"
                android:layout_marginBottom="8dp"
                android:text="@string/searchLabelText"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/mediaSearchView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/mediaSearchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:alpha="9"

                app:layout_constraintTop_toBottomOf="@+id/searchMediaLabelTextView"
                tools:layout_editor_absoluteX="0dp">

            </SearchView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>